--- a/LED/app/src/main/res/layout/activity_configurations.xml
+++ b/LED/app/src/main/res/layout/activity_configurations.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#ddd"
     tools:context=".classLED">
 
     <android.support.constraint.Guideline
@@ -51,7 +52,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
-        android:text="Lista Konfiguracji"
+        android:text="List of Configurations"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
