--- a/LED/app/src/main/res/layout/activity_led.xml
+++ b/LED/app/src/main/res/layout/activity_led.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#ddd"
     tools:context=".classLED">
     <android.support.constraint.Guideline
         android:id="@+id/guideline"
@@ -28,31 +29,29 @@
 
     <Switch
         android:id="@+id/switch1"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginTop="36dp"
+        android:scaleX="1.5"
+        android:scaleY="1.5"
         android:switchMinWidth="100dp"
         android:switchPadding="50dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:text="PR"
-        android:textSize="30dp"
+        android:track="@drawable/red_track"
         android:visibility="visible"
-        android:scaleY="1.5"
-        android:scaleX="1.5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <Switch
         android:id="@+id/switch3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:scaleY="1.5"
+        android:layout_marginTop="20dp"
         android:scaleX="1.5"
+        android:scaleY="1.5"
         android:switchMinWidth="100dp"
         android:switchPadding="50dp"
-        android:text="BLE"
-        android:textSize="30dp"
+        android:track="@drawable/white_track"
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -62,13 +61,12 @@
         android:id="@+id/switch2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:scaleY="1.5"
+        android:layout_marginTop="20dp"
         android:scaleX="1.5"
+        android:scaleY="1.5"
         android:switchMinWidth="100dp"
         android:switchPadding="50dp"
-        android:text="PIR"
-        android:textSize="30dp"
+        android:track="@drawable/green_track"
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -78,14 +76,27 @@
         android:id="@+id/button2"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:text="konfiguracje"
+        android:text="configurations"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:layout_marginBottom="40dp"
+        android:text="LED"
+        app:layout_constraintBottom_toTopOf="@+id/guideline2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
