--- a/LED/app/src/main/res/layout/activity_pair_list.xml
+++ b/LED/app/src/main/res/layout/activity_pair_list.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".classPairList"
+    android:background="#ddd"
     android:id="@+id/relativeLayout">
 
     <TextView
@@ -15,7 +16,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
-        android:text="Lista Połączonych urządzeń"
+        android:text="List of Paired Devices"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
